fix stats overflow

--- a/src/components/Connect.module.css
+++ b/src/components/Connect.module.css
@@ -35,4 +35,5 @@
     border-radius: 4px;
     box-shadow: 0 0 0 2px #0000001a;
     padding: 8px;
+    overflow: auto;
 }
